--- a/src/theme.scss
+++ b/src/theme.scss
@@ -769,7 +769,8 @@ select {
                 width: 100%;
                 bottom: $cover-height/2 - $edit-size;
 
-                .edit {
+                .edit,
+                .add {
                   background-color: rgba(#000, 0.7);
                   border-radius: $edit-size/2;
                   width: $edit-size;
@@ -785,11 +786,18 @@ select {
                     &:before {
                       @include fa($icon-size-l);
                       color: $font-color;
-                      content: $fa-var-pencil;
                       margin: ($edit-size - $icon-size-l) / 2;
                     }
 
                   }
+                }
+
+                .edit a:before {
+                  content: $fa-var-pencil;
+                }
+
+                .add a:before {
+                  content: $fa-var-plus;
                 }
               }
 
