--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,4 +1,4 @@
-@import url('https://malcat-gen.appspot.com/series?template=.data.image a[href^="/$list/$id/"]:after{background-image:url($series_image)}');
+@import url('https://malcat-gen.appspot.com/series?template=.data.image a[href^="/$list/$id/"]::after{background-image:url($series_image)}'); // sass-lint:disable-line max-line-length
 @import '../node_modules/font-awesome-sass/assets/stylesheets/font-awesome/variables';
 
 $default-background: './assets/background.jpg';
@@ -27,11 +27,14 @@ $edit-size: 50px;
 $background: hsl(240, 15%, 20%);
 $status-background: lighten($background, 10%);
 
-$font-color: hsl(0, 0%, 100%);
+$black: #000;
+$white: #fff;
+
+$font-color: $white;
 $font-color-2: darken($font-color, 20%);
 $font-color-3: darken($font-color, 50%);
 
-$hue-offset: 360/6;
+$hue-offset: 360 / 6;
 $dropped-color: hsl(0, 50%, 50%);
 $on-hold-color: adjust-hue($dropped-color, $hue-offset);
 $watching-color: adjust-hue($dropped-color, $hue-offset * 2);
@@ -41,35 +44,37 @@ $all-color: adjust-hue($dropped-color, $hue-offset * 5);
 
 $score-color: saturate($dropped-color, 25%);
 
-$status-shadow: linear-gradient(125deg, transparent 60%, rgba(#000, 0.5));
-$box-shadow: rgba(#000, 0.5) 1px 1px 2px;
-$text-shadow: #000 1px 1px 1px;
-$edit-shadow: #000 2px 2px 5px;
+$status-shadow: linear-gradient(125deg, transparent 60%, rgba($black, 0.5));
+$box-shadow: rgba($black, 0.5) 1px 1px 2px;
+$text-shadow: $black 1px 1px 1px;
+$edit-shadow: $black 2px 2px 5px;
 
 $text-border: currentColor 1px solid;
 
 @font-face {
   font-family: 'AGRevueCyr Roman Medium';
-  src: local('AGRevueCyr Roman Medium'), local('AGRevueCyr-Roman-Medium'), url('./assets/AGRevueCyr.woff') format('woff');
+  src: local('AGRevueCyr Roman Medium'),
+  local('AGRevueCyr-Roman-Medium'),
+  url('./assets/AGRevueCyr.woff') format('woff');
 }
 
 @mixin fa($size: $icon-size) {
   display: inline-block;
-  font: normal normal normal #{$size}/1 FontAwesome;
+  font: normal normal normal #{$size} / 1 FontAwesome;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: auto;
 }
 
 @mixin font($size: $font-size) {
-  font: normal normal normal #{$size}/1 tahoma, verdana, arial, sans-serif;
+  font: normal normal normal #{$size} / 1 tahoma, verdana, arial, sans-serif;
 }
 
 @mixin tooltip-placement($h-align: left, $v-align: top, $h-offset: 0, $v-offset: 0) {
   @include font;
   #{$h-align}: $h-offset;
   #{$v-align}: $v-offset;
-  margin-#{$v-align}: ($font-size + $item-padding*2) * -1;
+  margin-#{$v-align}: ($font-size + $item-padding * 2) * -1;
   padding-#{$v-align}: $item-padding;
   text-align: $h-align;
   vertical-align: $v-align;
@@ -83,19 +88,19 @@ $text-border: currentColor 1px solid;
 }
 
 @mixin tooltip($text, $h-align: left, $v-align: top, $h-offset: 0, $v-offset: 0) {
-  &:after {
+  &::after {
     @include tooltip-placement($h-align, $v-align, $h-offset, $v-offset);
     content: $text;
     position: absolute;
     overflow: hidden;
     width: 0;
     opacity: 0;
-    transition-property: all;
+    transition-property: width, opacity;
     transition-duration: 0.3s;
     transition-timing-function: ease-in-out;
   }
 
-  &:hover:after {
+  &:hover::after {
     width: 100px;
     opacity: 1;
   }
@@ -104,10 +109,10 @@ $text-border: currentColor 1px solid;
 body {
   @include font;
   background-color: $background;
-  background-position: top ($header-height+$status-menu-height) center;
+  background-position: top ($header-height + $status-menu-height) center;
 }
 
-input[type=text],
+input[type='text'],
 select {
   @include font;
   background: transparent;
@@ -124,7 +129,7 @@ select {
   appearance: none;
 
   option {
-    color: #000;
+    color: $black;
   }
 }
 
@@ -182,7 +187,7 @@ select {
     }
 
     .list-menu {
-      display: block !important;
+      display: block !important;  // sass-lint:disable-line no-important
       top: $font-size-l + $item-padding;
       right: 0;
       background-color: transparent;
@@ -208,7 +213,7 @@ select {
         &.manga-list {
           @include tooltip('Manga List', right, bottom);
 
-          &:before {
+          &::before {
             @include fa;
             content: $fa-var-book;
             color: $font-color;
@@ -218,7 +223,7 @@ select {
         &.anime-list {
           @include tooltip('Anime List', right, bottom);
 
-          &:before {
+          &::before {
             @include fa;
             content: $fa-var-film;
             color: $font-color;
@@ -273,6 +278,11 @@ select {
 
     &.profile {
       @include tooltip('Profile');
+      background-image: none !important;  // sass-lint:disable-line no-important
+
+      &::before {
+        content: $fa-var-user;
+      }
     }
 
     .text {
@@ -283,44 +293,36 @@ select {
       display: none;
     }
 
-    &:before {
+    &::before {
       @include fa;
       text-shadow: $text-shadow;
     }
 
-    &.profile {
-      background-image: none !important;
-
-      &:before {
-        content: $fa-var-user;
-      }
-    }
-
-    &.quick-add:before {
+    &.quick-add::before {
       content: $fa-var-plus-square;
     }
 
-    &.anime-list:before {
+    &.anime-list::before {
       content: $fa-var-film;
     }
 
-    &.manga-list:before {
+    &.manga-list::before {
       content: $fa-var-book;
     }
 
-    &.history:before {
+    &.history::before {
       content: $fa-var-history;
     }
 
-    &.export:before {
+    &.export::before {
       content: $fa-var-file;
     }
 
-    &.logout:before {
+    &.logout::before {
       content: $fa-var-sign-out;
     }
 
-    &.setting:before {
+    &.setting::before {
       content: $fa-var-cog;
     }
 
@@ -377,7 +379,7 @@ select {
 
   .cover-block {
     width: 100%;
-    background: url($default-background) top/cover no-repeat;
+    background: url($default-background) top / cover no-repeat;
     min-height: $header-height;
 
     #cover-image-container {
@@ -420,33 +422,33 @@ select {
           font-weight: bold;
         }
 
-        &:after {
+        &::after {
           border-radius: 2px;
         }
 
-        &.all_anime:after {
+        &.all_anime::after {
           background-color: $all-color;
         }
 
-        &.watching:after,
-        &.reading:after {
+        &.watching::after,
+        &.reading::after {
           background-color: $watching-color;
         }
 
-        &.completed:after {
+        &.completed::after {
           background-color: $completed-color;
         }
 
-        &.onhold:after {
+        &.onhold::after {
           background-color: $on-hold-color;
         }
 
-        &.dropped:after {
+        &.dropped::after {
           background-color: $dropped-color;
         }
 
-        &.plantowatch:after,
-        &.plantoread:after {
+        &.plantowatch::after,
+        &.plantoread::after {
           background-color: $planned-color;
         }
       }
@@ -535,7 +537,10 @@ select {
       background-color: transparent;
       width: auto;
       position: absolute;
-      margin-top: ($status-menu-height + $page-padding + $icon-size + $item-padding + ($font-size + $item-padding)*2) * -1;
+      margin-top: (
+        $status-menu-height + $page-padding +
+        $icon-size + $item-padding +
+        ($font-size + $item-padding) * 2) * -1;
       right: $page-padding;
     }
 
@@ -557,7 +562,7 @@ select {
           opacity: 1;
         }
 
-        &:after {
+        &::after {
           @include fa;
           content: $fa-var-sort;
           text-shadow: $text-shadow;
@@ -570,7 +575,7 @@ select {
           font-size: 0;
           z-index: 1;
           padding-top: $item-padding;
-          margin-top: ($icon-size + $item-padding*2) * -1;
+          margin-top: ($icon-size + $item-padding * 2) * -1;
           margin-right: $text-padding * -1;
           height: $font-size + $icon-size + $item-padding;
           width: 0;
@@ -630,7 +635,7 @@ select {
         &:hover {
           width: $cover-width + $item-padding * 6;
           height: $cover-height + $item-padding * 6;
-          margin: $item-padding*2 * -1;
+          margin: $item-padding * 2 * -1;
           z-index: 2;
 
           .list-table-data .data.title .add-edit-more,
@@ -656,7 +661,7 @@ select {
               &.reading ~ .volume {
                 background: $status-shadow, $watching-color;
 
-                &:before {
+                &::before {
                   content: $fa-var-play;
                 }
               }
@@ -666,7 +671,7 @@ select {
               &.plantoread ~ .volume {
                 background: $status-shadow, $planned-color;
 
-                &:before {
+                &::before {
                   content: $fa-var-thumb-tack;
                 }
               }
@@ -676,7 +681,7 @@ select {
               &.completed ~ .volume {
                 background: $status-shadow, $completed-color;
 
-                &:before {
+                &::before {
                   content: $fa-var-check;
                 }
               }
@@ -686,7 +691,7 @@ select {
               &.onhold ~ .volume {
                 background: $status-shadow, $on-hold-color;
 
-                &:before {
+                &::before {
                   content: $fa-var-pause;
                 }
               }
@@ -696,7 +701,7 @@ select {
               &.dropped ~ .volume {
                 background: $status-shadow, $dropped-color;
 
-                &:before {
+                &::before {
                   content: $fa-var-trash;
                 }
               }
@@ -720,7 +725,7 @@ select {
                   border: 0;
                 }
 
-                &:after {
+                &::after {
                   content: '';
                   background-repeat: no-repeat;
                   background-size: cover;
@@ -732,19 +737,19 @@ select {
                 }
               }
 
-              &:after {
+              &::after {
                 top: 0;
                 left: 0;
                 bottom: 0;
                 right: 0;
                 position: absolute;
                 content: '';
-                background: linear-gradient(rgba(#000, 0) 70%, rgba(#000, 0.9));
+                background: linear-gradient(rgba($black, 0) 70%, rgba($black, 0.9));
               }
             }
 
             &.title {
-              bottom: ($font-size + $item-padding)*2;
+              bottom: ($font-size + $item-padding) * 2;
               left: $item-padding;
               right: $item-padding;
               text-align: center;
@@ -767,12 +772,12 @@ select {
                 font-size: 0;
                 position: absolute;
                 width: 100%;
-                bottom: $cover-height/2 - $edit-size;
+                bottom: $cover-height / 2 - $edit-size;
 
                 .edit,
                 .add {
-                  background-color: rgba(#000, 0.7);
-                  border-radius: $edit-size/2;
+                  background-color: rgba($black, 0.7);
+                  border-radius: $edit-size / 2;
                   width: $edit-size;
                   height: $edit-size;
                   display: inline-block;
@@ -783,7 +788,7 @@ select {
                       text-decoration: none;
                     }
 
-                    &:before {
+                    &::before {
                       @include fa($icon-size-l);
                       color: $font-color;
                       margin: ($edit-size - $icon-size-l) / 2;
@@ -792,11 +797,11 @@ select {
                   }
                 }
 
-                .edit a:before {
+                .edit a::before {
                   content: $fa-var-pencil;
                 }
 
-                .add a:before {
+                .add a::before {
                   content: $fa-var-plus;
                 }
               }
@@ -811,7 +816,7 @@ select {
               right: $item-padding;
               top: 0; //should be $item-padding but the heart doesn't touch the outline on top
 
-              &:before {
+              &::before {
                 @include fa($icon-size-l);
                 position: absolute;
                 color: $score-color;
@@ -825,14 +830,14 @@ select {
               .link {
                 @include font;
                 color: $font-color;
-                top: ($icon-size-l - $font-size)/2 - 2px; //move up 2px because the heart is a bit head heavy
+                top: ($icon-size-l - $font-size) / 2 - 2px; //move up 2px because the heart is a bit head heavy
                 right: 0;
                 width: $icon-size-l;
                 position: absolute;
               }
 
               select {
-                top: ($icon-size-l - $font-size)/2 - 2px;
+                top: ($icon-size-l - $font-size) / 2 - 2px;
                 right: $item-padding;
                 width: 20px;
                 position: absolute;
@@ -853,8 +858,8 @@ select {
               color: $font-color;
               white-space: nowrap;
               font-size: 0;
-              padding: $item-padding $item-padding*3 $item-padding $item-padding;
-              border-bottom-right-radius: ($font-size + $item-padding*2)/2;
+              padding: $item-padding $item-padding * 3 $item-padding $item-padding;
+              border-bottom-right-radius: ($font-size + $item-padding * 2) / 2;
               box-shadow: $box-shadow;
 
               div {
@@ -874,16 +879,16 @@ select {
               span:nth-child(2) {
                 font-size: $font-size;
 
-                &:before {
+                &::before {
                   content: '/';
                 }
               }
 
-              &:before {
+              &::before {
                 @include fa;
                 display: inline-block;
                 color: rgba($font-color, 0.5);
-                margin-right: $item-padding*2;
+                margin-right: $item-padding * 2;
               }
 
               .icon-add-episode,
@@ -902,10 +907,10 @@ select {
             }
 
             &.chapter ~ .volume {
-              top: $icon-size + $item-padding*3;
-              border-top-right-radius: ($font-size + $item-padding*2)/2;
+              top: $icon-size + $item-padding * 3;
+              border-top-right-radius: ($font-size + $item-padding * 2) / 2;
 
-              &:before {
+              &::before {
                 opacity: 0;
               }
             }
