display content-status (airing, not yet aired etc) in new line

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -784,6 +784,7 @@ select {
                 font-size: $font-size;
                 color: $font-color-2;
                 text-shadow: $text-shadow;
+                display: block;
               }
 
               .add-edit-more {
