--- a/src/theme.scss
+++ b/src/theme.scss
@@ -748,6 +748,7 @@ select {
                   content: '';
                   background-repeat: no-repeat;
                   background-size: cover;
+                  background-position: center;
                   position: absolute;
                   top: 0;
                   left: 0;
