move definition of header height and header/footer font colors to the top of css

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -77,6 +77,7 @@ $text-border: currentColor 1px solid;
 .list-menu-float,
 .search-container,
 .stats,
+.list-stats,
 tbody:first-child {
   color: $font-color;
 }
