--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,4 +1,5 @@
-@import url('https://malcat-gen.appspot.com/series?template=.data.image a[href^="/$list/$id/"]::after{background-image:url($series_image)}'); //sass-lint:disable-line max-line-length
+@\import 'https://malcat-gen.appspot.com/series?template=.data.image a[href^="/$list/$id/"]:after{background-image:url($series_image)}'; //sass-lint:disable-line max-line-length
+@\import 'https://malscraper.azurewebsites.net/covers/auto/presets/dataimagelinkafter';
 @import '../node_modules/font-awesome-sass/assets/stylesheets/font-awesome/variables';
 
 //sass-lint:disable no-color-literals
